@@ -5353,6 +5353,9 @@ int quickload(char *nombre) {
 	z80_bit antes_superupgrade_enabled;
 	antes_superupgrade_enabled.v=superupgrade_enabled.v;
 
+    z80_bit antes_debug_breakpoints_enabled;
+    antes_debug_breakpoints_enabled.v=debug_breakpoints_enabled.v;
+
 
 	int retorno=quickload_continue(nombre);
 
@@ -5380,6 +5383,14 @@ int quickload(char *nombre) {
 		debug_printf (VERBOSE_DEBUG,"Reenabling superupgrade as it was enabled before quickload");
 		superupgrade_enable(0);
 	}
+
+    //Si estaba modo debug cpu, reactivar
+    //Asegurarme que no este ya habilitado debug_breakpoints_enabled.v, no deberia suceder, al llegar aqui
+    //se ha desactivado breakpoints, pero por si acaso
+    if (antes_debug_breakpoints_enabled.v && debug_breakpoints_enabled.v) {
+        debug_printf(VERBOSE_DEBUG,"Re-enabling breakpoints because they were enabled before quickload");
+        breakpoints_enable();
+    }
 
 	return retorno;
 
